--- a/app/static/css/app.css
+++ b/app/static/css/app.css
@@ -1,3 +1,20 @@
 body {
     padding-top: 5rem;
 }
+
+#ppic {
+    height: 12em;
+    width: 12em;
+    display: block;
+    margin : auto;
+    /* box-shadow: 2px 2px 1px 1px;  */
+}
+
+#picbg {
+    height: 25em;
+    width: 100%;
+}
+
+#profile-top {
+    background-color: var(--purple);
+}
